@@ -61,6 +61,9 @@
   - remove DEPRECATED insert method param option
   - remove DEPRECATED select method column option [COLUMN, as => ALIAS] format
   - remove DEPRECATED select method column option [COLUMN => ALIAS] format
+  - remove DEPRECATED select method where_param option
+  - remove DEPRECATED delete method where_param option
+  - remove DEPRECATED update method where_param option
 
 0.37
   - catch up Object::Simple 3.16. fix DEPRECATED warnings.
